TestSuite/errors/err0218.pas
type
  Icell = interface
    property State: integer read write;
  end;

  Cell = class(Icell)
  end;

begin
end.